# Homemaster

./: .gitignore  README.md  pyproject.toml  run_all_tests.sh  run_api_scenarios.sh
config/: nvidia_api_config.json
data/scenarios/: catalog.json  (+1 more)
record/: 2026-04-24-mimo-streaming-heartbeat-and-retry.md  2026-04-25-stage-01-homemaster-contract.md  2026-04-25-stage-02-task-card.md  2026-04-25-stage-03-memory-rag.md  2026-04-25-stage-04-grounding-context.md  2026-04-26-stage-05-skill-execution-loop.md  2026-04-26-stage-06-summary-memory.md
report/: 2026-04-25-stage-01-04-review.md  2026-04-29-stage07-check_medicine_stale_recover.md  2026-04-29-stage07-check_medicine_success.md  2026-04-29-stage07-distractor_rejected.md  2026-04-29-stage07-fetch_cup_retry.md  2026-04-29-stage07-live-5-scenarios-report.md  2026-04-29-stage07-object_not_found.md  2026-04-29-stage07-report-index.md
scripts/: capture_scenario_snapshot.py  run_full_project_with_records.sh  run_homemaster_scenarios.sh
tests/: mimo_response_time.py  test_adapters.py  test_capabilities.py  test_cli.py  test_cli_phase_b_visibility.py  test_domain.py  test_failure_analysis.py  test_gateway.py  test_graph_scenarios.py  test_kimi_provider.py  test_llm_prompt_contract.py  test_memory_reconciliation.py  test_memory_retrieval.py  test_observation_abstraction.py  test_parser_context.py  test_phase_a_quality_gate.py  test_phase_b_memory_planner.py  test_planner_validation.py  test_recovery.py  test_scenario_fixtures.py  test_simulator_readiness.py  test_smoke.py  test_stage_acceptance_matrix.py  test_verification.py
(+451 files in other folders)
