[project]
name = "elder-task-brain"
version = "0.1.0"
description = "Memory-grounded embodied task brain CLI MVP"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "langgraph>=0.2",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[project.scripts]
task-brain = "task_brain.cli:app"
homemaster = "homemaster.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "live_api: runs tests that call real external APIs",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
